--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -66,8 +66,11 @@ body {
 	top: 200px;
 	right: 0;
 	width: 60px;
-	height: 200px;
+	height: 150px;
 	overflow: hidden;
+	padding-top: 50px;
+	border: 2px rgb(155, 39, 39) solid;
+
 }
 
 .show {
